Add sass compilation

--- a/css/app.scss
+++ b/css/app.scss
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
   ================
   DEVELOPERS: READ BEFORE EDITING!
@@ -6,3 +7,5 @@
   If you don't care about Sass, delete this block and the ebi-global.scss file
     and use the compiled CSS version.
 */
+
+// empty
