--- a/css/app.css
+++ b/css/app.css
@@ -6,3 +6,10 @@
   If you don't care about Sass, delete this block and the ebi-global.scss file
     and use the compiled CSS version.
 */
+.show-grid .columns {
+  box-shadow: 1px 1px 1px #ddd, -1px -1px 1px #ddd; }
+
+.row {
+  background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.05) 0%, transparent 0.5%, transparent 99%, rgba(0, 0, 0, 0.05) 100%), linear-gradient(0deg, rgba(0, 0, 0, 0.05) 0%, transparent 1%, transparent 95%, rgba(0, 0, 0, 0.05) 100%);
+  height: 100%;
+  background-size: 8.3333%, 2rem; }
