--- a/css/app.scss
+++ b/css/app.scss
@@ -9,3 +9,21 @@
 */
 
 // empty
+
+.show-grid .columns {
+  box-shadow: 1px 1px 1px #ddd, -1px -1px 1px #ddd;
+}
+
+.row {
+  // background-color: #333;
+  // background-image:
+  // linear-gradient(0deg, transparent 24%, rgba(255, 255, 255, .05) 25%, rgba(255, 255, 255, .05) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, .05) 75%, rgba(255, 255, 255, .05) 76%, transparent 77%, transparent);
+  // background-image: linear-gradient(90deg, transparent 24%, rgba(0,0,0, .05) 25%, rgba(0,0,0, .05) 26%, transparent 27%, transparent 74%, rgba(0,0,0, .05) 75%, rgba(0,0,0, .05) 76%, transparent 77%, transparent);
+  background-image:
+    linear-gradient(90deg, rgba(0,0,0, .05) 0%, transparent .5%, transparent 99%, rgba(0,0,0, .05) 100%),
+    linear-gradient(0deg, rgba(0,0,0, .05) 0%, transparent 1%, transparent 95%, rgba(0,0,0, .05) 100%);
+  height:100%;
+  background-size: 8.3333%, 2rem;
+  // background-size: (100/12)%, 2rem;
+
+}
