--- a/css/app.scss
+++ b/css/app.scss
@@ -10,20 +10,52 @@
 
 // empty
 
+.show-grid .row {
+  max-width: 72rem;
+  min-width: 72rem;
+  
+}
 .show-grid .columns {
   box-shadow: 1px 1px 1px #ddd, -1px -1px 1px #ddd;
-}
 
-.row {
-  // background-color: #333;
-  // background-image:
-  // linear-gradient(0deg, transparent 24%, rgba(255, 255, 255, .05) 25%, rgba(255, 255, 255, .05) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, .05) 75%, rgba(255, 255, 255, .05) 76%, transparent 77%, transparent);
-  // background-image: linear-gradient(90deg, transparent 24%, rgba(0,0,0, .05) 25%, rgba(0,0,0, .05) 26%, transparent 27%, transparent 74%, rgba(0,0,0, .05) 75%, rgba(0,0,0, .05) 76%, transparent 77%, transparent);
   background-image:
     linear-gradient(90deg, rgba(0,0,0, .05) 0%, transparent .5%, transparent 99%, rgba(0,0,0, .05) 100%),
     linear-gradient(0deg, rgba(0,0,0, .05) 0%, transparent 1%, transparent 95%, rgba(0,0,0, .05) 100%);
   height:100%;
-  background-size: 8.3333%, 2rem;
+  background-size: 8.4%, 30px; // 72/12
   // background-size: (100/12)%, 2rem;
-
+  //
+  &.large-11 {
+    background-size: 9.2%, 30px;
+  }
+  &.large-10 {
+    background-size: 10.1%, 30px;
+  }
+  &.large-9 {
+    background-size: 11.2%, 30px;
+  }
+  &.large-8 {
+    background-size: 12.6%, 30px;
+  }
+  &.large-7 {
+    background-size: 14.4%, 30px;
+  }
+  &.large-6 {
+    background-size: 16.8%, 30px;
+  }
+  &.large-5 {
+    background-size: 20.1%, 30px;
+  }
+  &.large-4 {
+    background-size: 25.2%, 30px;
+  }
+  &.large-3 {
+    background-size: 33.333%, 30px;
+  }
+  &.large-2 {
+    background-size: 50%, 30px;
+  }
+  &.large-1 {
+    background-size: 100%, 30px;
+  }
 }
