--- a/css/app.css
+++ b/css/app.css
@@ -13,6 +13,25 @@ h1.intro, .h1.intro {
 p {
   margin: .5rem 0; }
 
+.caption {
+  font-family: "Fira Mono"; }
+
+.white-transparent-background {
+  background: rgba(255, 255, 255, 0.9); }
+
+.badge {
+  display: inline-block;
+  min-width: 2.1em;
+  padding: .3em;
+  border-radius: 0;
+  font-size: .9rem;
+  text-align: center;
+  background: #a8c700;
+  color: #111; }
+
+.button-grid .inner {
+  padding-top: .5rem; }
+
 .main-content-area a:link {
   background: linear-gradient(#fff, #fff), linear-gradient(#fff, #fff), linear-gradient(#a8c700, #a8c700);
   background-size: 0.05em 1px, 0.05em 1px, 1px 2px;
