--- a/css/app.scss
+++ b/css/app.scss
@@ -45,6 +45,13 @@ p {
   padding-top: .5rem;
 }
 
+.global-navigation {
+  line-height: 3.5rem;
+  font-family: "Fira Mono";
+  padding-bottom: 1.9rem;
+  font-size: .9rem;
+}
+
 .main-content-area a:link {
     background: linear-gradient(#fff, #fff),linear-gradient(#fff, #fff),linear-gradient($maincolor, $maincolor);
     background-size: 0.05em 1px, 0.05em 1px, 1px 2px;
