--- a/css/app.css
+++ b/css/app.css
@@ -32,10 +32,41 @@ p {
 .button-grid .inner {
   padding-top: .5rem; }
 
+.global-masthead {
+  background: #a8c700;
+  transition-property: color, background-color, border-color;
+  transition-duration: 0.5s; }
+  .global-masthead .embl-logo {
+    margin-left: 1rem;
+    border-left: 1px solid #111;
+    height: 35px;
+    width: 95px;
+    display: inline-block;
+    background: url("https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-mono-black.svg") no-repeat right;
+    position: relative;
+    top: 12px; }
+  .global-masthead .what {
+    transition-property: opacity, left, top, height;
+    transition-duration: 0.5s;
+    opacity: 0; }
+    .global-masthead .what:before {
+      content: "> "; }
+  .global-masthead.is-stuck {
+    background: #000;
+    color: #a8c700; }
+    .global-masthead.is-stuck .embl-logo {
+      background: url("https://embl-design-language.github.io/Framework-for-Websites/assets/logos/EMBL-mono-white.svg") no-repeat right; }
+    .global-masthead.is-stuck a {
+      color: #a8c700; }
+    .global-masthead.is-stuck .embl-logo {
+      border-left: 1px solid #a8c700; }
+    .global-masthead.is-stuck .what {
+      opacity: 1; }
+
 .global-navigation {
   line-height: 3.5rem;
   font-family: "Fira Mono";
-  padding-bottom: 1.9rem;
+  padding-bottom: 0.3rem;
   font-size: .9rem; }
 
 .main-content-area a:link {
