--- a/css/app.css
+++ b/css/app.css
@@ -8,7 +8,8 @@
 */
 h1.intro, .h1.intro {
   margin-bottom: 0;
-  line-height: 1.3; }
+  line-height: 1.3;
+  margin-top: 4rem; }
 
 p {
   margin: .5rem 0; }
