--- a/css/app.scss
+++ b/css/app.scss
@@ -16,6 +16,7 @@ linear-gradient(0deg, rgba(0,0,0, .05) 0%, transparent 1%, transparent 95%, rgba
 h1.intro, .h1.intro {
   margin-bottom: 0;
   line-height: 1.3;
+   margin-top: 4rem;
 }
 
 p {
@@ -80,7 +81,6 @@ p {
 
     a {
       color: $maincolor;
-
     }
 
     .embl-logo {
