Tweak hover state

--- a/css/app.css
+++ b/css/app.css
@@ -77,6 +77,14 @@ p {
   text-shadow: 0.03em 0 #ffffff, -0.03em 0 #ffffff, 0 0.03em #ffffff, 0 -0.03em #ffffff, 0.06em 0 #ffffff, -0.06em 0 #ffffff, 0.09em 0 #ffffff, -0.09em 0 #ffffff, 0.12em 0 #ffffff, -0.12em 0 #ffffff, 0.15em 0 #ffffff, -0.15em 0 #ffffff;
   background-position: 0% 93%, 100% 93%, 0% 93%; }
 
+.main-content-area a:hover {
+  background: linear-gradient(#fff, #fff), linear-gradient(#fff, #fff), linear-gradient(#fff, #fff);
+  color: #a8c700;
+  background-size: 0.05em 1px, 0.05em 1px, 1px 2px;
+  background-repeat: no-repeat, no-repeat, repeat-x;
+  text-shadow: 0.03em 0 #ffffff, -0.03em 0 #ffffff, 0 0.03em #ffffff, 0 -0.03em #ffffff, 0.06em 0 #ffffff, -0.06em 0 #ffffff, 0.09em 0 #ffffff, -0.09em 0 #ffffff, 0.12em 0 #ffffff, -0.12em 0 #ffffff, 0.15em 0 #ffffff, -0.15em 0 #ffffff;
+  background-position: 0% 93%, 100% 93%, 0% 93%; }
+
 .gray-box {
   background: #CCC;
   border: 0.5px solid rgba(255, 255, 255, 0.5); }
