--- a/css/app.scss
+++ b/css/app.scss
@@ -106,7 +106,14 @@ p {
     background-repeat: no-repeat, no-repeat, repeat-x;
     text-shadow: 0.03em 0 #ffffff, -0.03em 0 #ffffff, 0 0.03em #ffffff, 0 -0.03em #ffffff, 0.06em 0 #ffffff, -0.06em 0 #ffffff, 0.09em 0 #ffffff, -0.09em 0 #ffffff, 0.12em 0 #ffffff, -0.12em 0 #ffffff, 0.15em 0 #ffffff, -0.15em 0 #ffffff;
     background-position: 0% 93%, 100% 93%, 0% 93%;
-    // color: $maincolor;
+}
+.main-content-area a:hover {
+    background: linear-gradient(#fff, #fff),linear-gradient(#fff, #fff),linear-gradient(#fff, #fff);
+    color: $maincolor;
+    background-size: 0.05em 1px, 0.05em 1px, 1px 2px;
+    background-repeat: no-repeat, no-repeat, repeat-x;
+    text-shadow: 0.03em 0 #ffffff, -0.03em 0 #ffffff, 0 0.03em #ffffff, 0 -0.03em #ffffff, 0.06em 0 #ffffff, -0.06em 0 #ffffff, 0.09em 0 #ffffff, -0.09em 0 #ffffff, 0.12em 0 #ffffff, -0.12em 0 #ffffff, 0.15em 0 #ffffff, -0.15em 0 #ffffff;
+    background-position: 0% 93%, 100% 93%, 0% 93%;
 }
 
 .gray-box {
